--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # Spring Database Configuration
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/users_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-
+spring.datasource.url=jdbc:postgresql://dpg-cgukoq2ut4mcfrj84kt0-a.ohio-postgres.render.com:5432/nix_db
+spring.datasource.username=nix_db_user
+spring.datasource.password=jFNjVi2KA0XfSeMnP5WCiqJdJfBFmKN3
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
